--- a/front-end/mean-app/package.json
+++ b/front-end/mean-app/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@auth0/angular-jwt": "^5.0.2",
+    "angular2-jwt": "^0.2.3",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
