--- a/front-end/mean-app/package.json
+++ b/front-end/mean-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~11.2.3",
+    "@angular/compiler-cli": "~11.2.4",
     "@angular/animations": "^11.2.13",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
@@ -45,5 +47,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "14.16.0",
+    "npm": "6.14.11"
   }
+  
 }
