--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
+  },
+  "devDependencies": {
+    "enhanced-resolve": "^3.3.0"
   }
 }
