--- a/front-end/mean-app/package.json
+++ b/front-end/mean-app/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node app.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~11.2.3",
-    "@angular/compiler-cli": "~11.2.4",
     "@angular/animations": "^11.2.13",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
@@ -28,8 +25,9 @@
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "typescript": "~4.1.5"
+    "zone.js": "~0.11.3"
+    
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
@@ -50,9 +48,5 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
-  },
-  "engines": {
-    "node": "14.16.0",
-    "npm": "6.14.11"
   }
 }
